--- a/action.yaml
+++ b/action.yaml
@@ -1,45 +1,14 @@
 ---
 name: Test Ansible roles with Molecule
 description: Run Molecule to test Ansible roles
-
-inputs:
-  namespace:
-    description: The [Docker Hub](https://hub.docker.com/) namespace where the image can be found. Defaults to `robertdebock`.
-    required: false
-    default: local
-  image:
-    description: The image you want to run on. Defaults to `fedora`.
-    required: false
-    default: fedora
-  tag:
-    description: The tag of the container image to use. Defaults to `latest`.
-    required: false
-    default: latest
-  options:
-    description: Options you can pass to [`tox`](https://tox.readthedocs.io/en/latest/), for example `--parallel all`.
-    required: false
-  command:
-    description: What command to pass to [molecule](https://molecule.readthedocs.io/en/latest/), for example `lint` or `syntax`. Defaults to `test`.
-    required: false
-    default: test
-  scenario:
-    description: The molecule scenario to run. Default to `default`.
-    required: false
-    default: default
-
 runs:
   using: docker
   image: 'docker://local/molecule-image:1.0.0'
   env:
     ANSIBLE_ROLES_PATH: "../"
     ANSIBLE_ASYNC_DIR: "/tmp/.ansible_async"
-    namespace: ${{ inputs.namespace }}
-    image: ${{ inputs.image }}
-    tag: ${{ inputs.tag }}
-    options: ${{ inputs.options }}
-    command: ${{ inputs.command }}
-    scenario: ${{ inputs.scenario }}
-
-branding:
-  icon: play
-  color: green
+    namespace: local
+    image: fedora
+    tag: latest
+    command: test
+    scenario: default
